name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:
    Main.hs
  hs-source-dirs:
    src
  -- other-modules:
  --   Api
  --   Api.Definition
  --   Api.Types
  --   Misc
  --   Page.Article
  --   Page.Auth
  --   Page.CreateArticle
  --   Page.Home
  --   Page.Profile
  --   Page.Settings
  --   Routes
  --   Support
  --   Types
  --   Utils.Miso.Router
  build-depends:
    base, miso, servant, aeson, time, text, lens, generic-lens, data-default, servant-client-core, servant-jsaddle, bytestring, http-types, network-uri, http-api-data, mtl, containers, cheapskate, blaze-html
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets, ghcjs-dom
  if impl(ghcjs)
    build-depends:
       ghcjs-base, ghcjs-dom-jsffi
  default-language:
     Haskell2010
  default-extensions:
     CPP
     RecordWildCards
     OverloadedStrings
     DataKinds
     TypeOperators
     TypeFamilies
     TypeApplications
     OverloadedLabels
     RankNTypes
     DeriveAnyClass
     DeriveGeneric
     DerivingStrategies
     DisambiguateRecordFields
     DuplicateRecordFields
     LambdaCase
     MultiWayIf
     FlexibleContexts
  ghc-options:
    -Wincomplete-patterns
